--- a/public/404.html
+++ b/public/404.html
@@ -5,51 +5,18 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>404 - Not Found</title>
-
-
-  <style>
-    /* Import font: Roboto Mono */
-    @import url('https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap');
-
-    * {
-      padding: 0;
-      margin: 0;
-      box-sizing: border-box;
-    }
-
-    .center-text {
-      text-align: center;
-    }
-
-    .center {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-    }
-
-    .container {
-      width: 100vw;
-      height: 100vh;
-    }
-
-    .title {
-      font-weight: bold;
-      font-size: 2rem;
-      font-family: 'Roboto Mono', sans-serif;
-    }
-
-    .title p {
-      font-weight: 100;
-    }
-  </style>
-
+  <link rel="stylesheet" href="css/404.styles.css">
 </head>
 
 <body>
   <div class="container center">
-    <div class="title center-text">
-      - 404 -
-      <p>Not Found</p>
+    <div class="error">
+      <div id="title">
+        - 404 -
+      </div>
+      <div id="error-content">
+        Not Found
+      </div>
     </div>
   </div>
 </body>
