--- a/public/index.html
+++ b/public/index.html
@@ -6,55 +6,59 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Smallified Links</title>
 
-  <!-- Bootstrap -START- -->
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
-    integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-    crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-    integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
-    crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
-    integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
-    crossorigin="anonymous"></script>
-  <!-- Bootstrap -END- -->
 
-  <style>
-    .center {
-      text-align: center;
-    }
+  <link rel="stylesheet" href="css/index.styles.css">
   </style>
 </head>
 
 <body>
 
   <div class="container" id="app">
-    <header class="jumbotron jumbotron-fluid">
-      <h1 class="display-4 center">Smallified Links</h1>
+
+    <header class="center header">
+      Smallified Links.
     </header>
 
-    <form v-if="visible" @submit.prevent="addNewURL()">
-      <div class="error" v-if="error">
-        {{error}}
-      </div>
-      <div class="form-group">
-        <label for="inputURL">URL 🚀</label>
-        <input type="text" class="form-control" id="inputURL" v-model="url" aria-describedby="URLHelp" required>
-        <small id="URLHelp" class="form-text text-muted">Please provide a valid url.</small>
-      </div>
-      <div class="form-group">
-        <label for="inputID">Identifier 📃</label>
-        <input type="text" class="form-control" id="inputID" v-model="id" aria-describedby="IDHelp">
-        <small id="IDHelp" class="form-text text-muted">This is optional.</small>
-      </div>
+    <main class="center">
 
-      <button class="btn btn-primary float-right" type="submit">Create Short URL</button>
-    </form>
+      <div class="error" v-if="error">{{error}}</div>
+      <form class="form-grid" v-if="visible" @submit.prevent="addNewURL()">
+        <ul class="form-group">
+          <li>
+            <label for="input-url">URL 🚀</label>
+          </li>
+          <li>
+            <input type="text" name="input-url" id="input-url" v-model="url" required>
+          </li>
+          <li>
+            <small>
+              A valid url must be provided.
+            </small>
+          </li>
+          <br>
+          <li>
+            <label for="input-id">Identifier 📃</label>
+          </li>
+          <li>
+            <input type="text" name="input-id" id="input-id" v-model="id">
+          </li>
+          <li>
+            <small>
+              This is optional, Can be used for custom short urls.
+            </small>
+          </li>
+          <br>
+          <li class="center">
+            <button class="submit" type="submit">Submit</button>
+          </li>
+        </ul>
+      </form>
 
-    <div v-if="created">
-      <p class="created">Your short url is: <a :href="created">{{created}}</a></p>
-    </div>
+      <p v-if="created">
+        <a :href="created">{{created}}</a>
+      </p>
+    </main>
+
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/vue"></script>
